--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.18.3",
     "moment": "^2.30.1",
+    "msgpack-lite": "^0.1.26",
     "node-cache": "^5.1.2",
-    "openwhisk": "^3.21.8"
+    "openwhisk": "^3.21.8",
+    "redis": "^4.6.13"
   }
 }
