Remove nginx, and add .env file to fetch environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,6 @@ services:
     ports:
       - "6379:6379"
 
-  nginx:
-    build: ./nginx
-    ports:
-      - "80:80"
-    depends_on:
-      - cache-service
-    networks:
-      - proxy-network
-
   cache-service:
     image: openwhisk-proxy
     networks:
@@ -26,6 +17,8 @@ services:
       - OPENWHISK_API_HOST=http://host.docker.internal:3233
       - REDIS_HOST=redis-server
       - REDIS_PORT=6379
+    # env_file:
+    #   - .env  
     depends_on:
       - redis-server
 
