--- a/cache-service/package.json
+++ b/cache-service/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "crypto": "^1.0.1",
     "express": "^4.18.3",
     "moment": "^2.30.1",
