--- a/cache-service/package.json
+++ b/cache-service/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.3",
     "moment": "^2.30.1",
